add repository to label make links open in new tab

--- a/app/options.html
+++ b/app/options.html
@@ -17,6 +17,20 @@
 </head>
 <body id="options" ng-controller="MyOptionsCtrl as options">
 
+
+<div>
+    <div class="row">
+        <div class="col s5 offset-s3 teal white-text">
+            To get a higher rate limit, add token to each repository. <br/>
+            Without token you get 60 requests per hour.<br/>
+            With token you get 5000 requests per hour. <br/>
+            So if you have a lot of repositories with a lot of pull requests, <br/>
+            make sure to assign different tokens to each repository
+
+        </div>
+    </div>
+</div>
+
 <div>
     <div class="row">
         <div class="col s3 teal lighten-1 left card-panel white-text">Github Pull Requests Options</div>
